[gd_scene load_steps=11 format=3 uid="uid://ddicd47q4hmh2"]

[ext_resource type="PackedScene" uid="uid://quek18lwasfk" path="res://ui/main_menu/menu.tscn" id="1_gvia5"]
[ext_resource type="Script" uid="uid://bw4q1c5l4f44l" path="res://scripts/main.gd" id="1_i11qp"]
[ext_resource type="PackedScene" uid="uid://ci4hbnu2j0l2e" path="res://scripts/components/spawn.tscn" id="2_nhlsy"]
[ext_resource type="PackedScene" uid="uid://b735bt1d7e3w7" path="res://ui/pause_menu/pause_menu.tscn" id="3_mf4xh"]
[ext_resource type="PackedScene" uid="uid://wf5gmejaffhe" path="res://ui/death_menu/death_menu.tscn" id="4_v0otc"]
[ext_resource type="Script" uid="uid://qcwlt0ntlcm0" path="res://audio/music/technical/backgroundMusicPlayer.gd" id="6_yfde7"]
[ext_resource type="PackedScene" uid="uid://lcqsxiferq0r" path="res://ui/ingame_ui/healthBar.tscn" id="7_bytmo"]
[ext_resource type="Script" uid="uid://ci14ev7t0tx61" path="res://scripts/camera_2d.gd" id="8_gl0lg"]
[ext_resource type="Script" uid="uid://cnc1aeltoe71v" path="res://scripts/focus_manager.gd" id="9_ragmj"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_5dr1j"]

[node name="main" type="Node2D"]
script = ExtResource("1_i11qp")

[node name="main2D" type="Node2D" parent="."]

[node name="main_menu" parent="." instance=ExtResource("1_gvia5")]
process_mode = 0

[node name="DeathMenu" parent="." instance=ExtResource("4_v0otc")]
visible = false

[node name="pause_menu" parent="." instance=ExtResource("3_mf4xh")]
visible = false

[node name="Spawn" parent="." instance=ExtResource("2_nhlsy")]
CHARACTER = "res://scenes/common/characters/main_char/main_char.tscn"

[node name="CanvasLayerForTestLabel" type="CanvasLayer" parent="."]

[node name="OSTestLabel" type="Label" parent="CanvasLayerForTestLabel"]
visible = false
z_index = 50
offset_left = 1.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.595706, 0.118168, 0, 1)
theme_override_font_sizes/font_size = 10
text = "OS"

[node name="G_STAT_TestLabel" type="Label" parent="CanvasLayerForTestLabel"]
visible = false
z_index = 50
offset_left = 1.0
offset_top = 14.0
offset_right = 17.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.595706, 0.118168, 0, 1)
theme_override_font_sizes/font_size = 10
text = "G_STAT"

[node name="AudioManager" type="Node" parent="."]

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = SubResource("AudioStreamInteractive_5dr1j")
autoplay = true
script = ExtResource("6_yfde7")

[node name="CanvasLayerForUi" type="CanvasLayer" parent="."]
layer = 0

[node name="HealthBar" parent="CanvasLayerForUi" instance=ExtResource("7_bytmo")]
offset_left = 11.0
offset_top = 229.0
offset_right = 61.0
offset_bottom = 233.0

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("8_gl0lg")

[node name="FocusManager" type="Node2D" parent="."]
process_mode = 2
script = ExtResource("9_ragmj")

[node name="CanvasLayer" type="CanvasLayer" parent="FocusManager"]
layer = 2

[node name="ColorRect" type="ColorRect" parent="FocusManager/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.53333336)

[node name="Focus_Message" type="Label" parent="FocusManager/CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 37.0
offset_top = 108.0
offset_right = 292.0
offset_bottom = 131.0
text = "Click with mouse to regain focus."
